1999-05-12  Jim Meyering  <meyering@ascend.com>

	* tests/Makefile.am (envvar-check): Renamed from check-local.
	(check): Depend on envvar-check so the envvar check is performed
	before all other tests.  Reported by Volker Borchert.
	* tests/.env-warn: Use `%%' place-holder that Makefile.am rule expects,
	so CDPATH is mentioned in the message.  Reported by Volker Borchert.

1999-05-11  Jim Meyering  <meyering@ascend.com>

	* src/sort.c (usage): Split the --help message into two pieces so that
	neither is longer than 2048.  For Irix4's cc.  Reported by Kaveh Ghazi.

1999-05-09  Jim Meyering  <meyering@ascend.com>

	* lib/regex.c: Update from libc.

	* Version 1.22k.

	* Makefile.maint (alpha): Put the announcement in
	/tmp/announce-$(distdir)

	* tests/sort/Test.pm (neg-nls): New test.

1999-05-08  Jim Meyering  <meyering@ascend.com>

	* src/system.h (CHAR_BIT, TYPE_SIGNED, TYPE_MINIMUM, TYPE_MAXIMUM,
	and all the *_MIN and *_MAX symbols): Remove definitions.
	* src/sys2.h: Put the definitions here instead (this file is shared
	between all three *utils packages, while system.h is not).

1999-05-06  Paul Eggert  <eggert@twinsun.com>

	* src/sort.c (fraccompare, numcompare): Merge the NLS and
	non-NLS versions into a single function.

	(decimal_point): Now char, since we no longer convert to unsigned
	char.
	(th_sep): Now int, since we use a value out of char range to denote
	the absence of a thousands separator.
	(IS_THOUSANDS_SEP): New macro.
	(USE_NEW_FRAC_COMPARE): Remove.
	(nls_set_fraction): Arg is now char, not unsigned char.
	Set th_sep to CHAR_MAX + 1 if there is no thousands separator.
	(numcompare): Don't convert to unsigned char unless necessary.
	(main): Turn off decimal points and thousand separators if they
	are multibyte characters, as we don't support that yet.

1999-05-06  Paul Eggert  <eggert@twinsun.com>

	* src/system.h (CHAR_MIN, CHAR_MAX): New macros.
	(SCHAR_MIN, SCHAR_MAX): Don't assume that char is signed.
